kisoenn/TCPIP/error.txt
[e1b16079@LPC3044 kisoenn]% gcc -o foobar rist4.1.c
rist4.1.c: In function ‘main’:
rist4.1.c:34:16: error: ‘structsockaddr’ undeclared (first use in this function)
  bind(sockfd, (structsockaddr *)&ca,sizeof(ca));
                ^
rist4.1.c:34:16: note: each undeclared identifier is reported only once for each function it appears in
rist4.1.c:34:32: error: expected expression before ‘)’ token
  bind(sockfd, (structsockaddr *)&ca,sizeof(ca));
                                ^
rist4.1.c:34:2: error: too few arguments to function ‘bind’
  bind(sockfd, (structsockaddr *)&ca,sizeof(ca));
  ^
In file included from rist4.1.c:5:0:
/usr/include/x86_64-linux-gnu/sys/socket.h:123:12: note: declared here
 extern int bind (int __fd, __CONST_SOCKADDR_ARG __addr, socklen_t __len)
            ^
rist4.1.c:41:18: error: ‘sokfd’ undeclared (first use in this function)
     n = recvfrom(sokfd, recv,512,0, (struct sockaddr *)0,(socklen_t *)0);




[e1b16079@LPC3044 kisoenn]% gcc -o server server.c
server.c: In function ‘main’:
server.c:36:2: warning: implicit declaration of function ‘print’ [-Wimplicit-function-declaration]
  print("Connected.\n");
  ^
server.c:46:2: error: expected ‘;’ before ‘}’ token
  }
  ^
server.c:48:29: error: expected ‘)’ before ‘recvline’
  printf("Send Data    :%s\n"recvline);
                             ^
server.c:48:9: warning: format ‘%s’ expects a matching ‘char *’ argument [-Wformat=]
  printf("Send Data    :%s\n"recvline);
         ^
server.c:49:11: warning: passing argument 1 of ‘fputs’ from incompatible pointer type [-Wincompatible-pointer-types]
     fputs(recv, stdout);
           ^
In file included from server.c:1:0:
/usr/include/stdio.h:689:12: note: expected ‘const char * restrict’ but argument is of type ‘ssize_t (*)(int,  void *, size_t,  int) {aka long int (*)(int,  void *, long unsigned int,  int)}’
 extern int fputs (const char *__restrict __s, FILE *__restrict __stream);


課題6
for(i=0;i<3;i++){
	   fgets(sendline,512,stdin);
	   n = strlen(sendline
	   n = recv(sockfd, buffer,512,0);　　　　　　　エラー
	　　　send(sockfd,sendline,512,0);
			↓
for(i=0;i<3;i++){
	   fgets(sendline,512,stdin);
	   n = strlen(sendline);　　　　　　　　　　　　　　　　　正常
	   send(sockfd,sendline,512,0);
	   n = recv(sockfd, buffer,512,0);

